# cookiecutter-ml-template

./: .gitlab-ci.yml  README.md  cookiecutter.json
.github/workflows/: ci.yml
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
{{ cookiecutter.project_slug }}/notebooks/: 00_data_exploration.ipynb  01_baseline_model.ipynb
{{ cookiecutter.project_slug }}/scripts/: dev.ps1
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: __init__.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/config/: __init__.py  defaults.yaml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/pipelines/: __init__.py  train.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/utils/: __init__.py  io.py
{{ cookiecutter.project_slug }}/tests/: test_baseline.py  test_imports.py
